--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #dad;
+  /* background-color: #dad; */
 }
 
 a {
@@ -24,4 +26,10 @@ a {
     color: white;
     background: black;
   }
+}
+
+/* Custom Title Font */
+@font-face {
+  font-family: 'Adorage';
+  src: url('../fonts/adorage-rgxqy.otf') format('truetype');
 }
