--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* background-color: #dad; */
+    background:
+      conic-gradient(from 90deg at 3px 3px,#0000 90deg,#E1F5FF 0) 
+      0 0/50px 50px;
 }
 
 a {
