--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,8 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
+  padding-top: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -12,57 +13,38 @@
   align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
+.aboutContainer {
+  display:flex;
+  flex-direction: column;
   align-items: center;
-}
-
-.footer a {
-  display: flex;
   justify-content: center;
+}
+
+.about {
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  flex-grow: 1;
+  gap: 30px;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.aboutText {
+  left: 100px;
+  position: relative;
+  z-index: 10;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.aboutImage {
+  position: relative;
+  z-index: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.moreInfo{
+  padding: 50px
 }
 
 .grid {
@@ -70,65 +52,10 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 400px;
+  gap: 25px;
+  margin-top: 3rem;
 }
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
-}
-
-/* MY STYLES */
 
 .gradientLanding{
   display: flex;
@@ -156,14 +83,15 @@
 
 /* portrait test */
 
-/* .heroHeader {
+.heroHeader {
   align-items: center;
   display: flex;
   flex-direction: column;
   width: 100vw;
-  background-color: antiquewhite;
   padding: 60px;
-} */
+  padding-bottom: 0px;
+  background: linear-gradient(180deg, #FFFFFF 51.85%, rgba(255, 255, 255, 0.5) 77.89%, rgba(217, 217, 217, 0) 91.96%);
+}
 
 .portrait {
   border-radius: 50%;
@@ -220,11 +148,11 @@
 
 /* Gradient */
 
-.heroImg {
+/* .heroImg {
   z-index: 1;
-}
+} */
 
-.heroHeader {
+/* .heroHeader {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -432,4 +360,4 @@
     top: 50vh;
     left: 100vw;
   }
-}
+} */
