--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,6 +60,32 @@
   margin-right: 0px; */
 }
 
+.projectsRow{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* width: 100%; */
+}
+
+.projectsColumnLeft{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  left: 100px;
+  position: relative;
+  
+}
+
+.projectsColumnRight{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+
 .gradientLanding{
   display: flex;
   align-items: flex-end;
