--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,7 +15,7 @@
 
 .aboutContainer {
   display:flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
@@ -25,11 +25,10 @@
   flex-direction: row;
   align-items: center;
   gap: 30px;
-  width: 100vw;
 }
 
 .aboutText {
-  left: 100px;
+  left: 70px;
   position: relative;
   z-index: 10;
 }
@@ -55,23 +54,26 @@
   flex-wrap: wrap;
   max-width: 400px;
   gap: 25px;
-  margin: auto;
+  margin: 20px;
   /* margin-top: 3rem;
   margin-right: 0px; */
 }
 
+.projectContainer {
+  margin-top: 100px;
+}
 .projectsRow{
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  gap: 50px;
   /* width: 100%; */
 }
 
 .projectsColumnLeft{
   display: flex;
   flex-direction: column;
-  gap: 30px;
   left: 100px;
   position: relative;
   
@@ -86,102 +88,9 @@
 }
 
 
-.gradientLanding{
-  display: flex;
-  align-items: flex-end;
-  width: 100vw;
-  height: 100vh;
-  background:
-  linear-gradient(115.55deg, #FFEA85 27.3%, #E291FF 53.18%, #8FB6FF 88.5%)
-    var(--c,0%)/200% no-repeat;
-  -webkit-background-clip: border-box;
-          background-clip: border-box;
-  transition: 1s;
-  z-index: -100;
-}
-
-.gradientLanding:hover {
-  --c:100%;
-}
-
-.gradientContainer {
-  padding: 10px;
-  color: #000000;
-}
-
-
-/* portrait test */
-
-.heroHeader {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  padding: 60px;
-  padding-bottom: 0px;
-  background: linear-gradient(180deg, #FFFFFF 51.85%, rgba(255, 255, 255, 0.5) 77.89%, rgba(217, 217, 217, 0) 91.96%);
-}
-
-.portrait {
-  border-radius: 50%;
-  -webkit-tap-highlight-color: transparent;
-  transform: scale(0.6); /* Updated scale property */
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portrait:hover {
-  transform: scale(0.66); /* Updated scale property */
-  -webkit-text-fill-color: #f5f5f5;
-}
-.container-inner {
-  align-items: center;
-  justify-content: center;
-  align-content: center;
-  display: flex;
-  position: relative;
-  transform-origin: 50%;
-}
-.portrait:hover .img1 {
-  transform: translateY(0) scale(1.2);
-}
-.circle {
-  cursor: pointer;
-  height: 456px; /* Updated height property */
-  width: 600px; /* Updated width property */
-  pointer-events: none;
-  position: absolute;
-}
-.img1 {
-  pointer-events: none;
-  position: relative;
-  transform: translateY(20px) scale(1.15);
-  transform-origin: 50% bottom;
-  transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
-  height: 412px; /* Updated height property */
-  width: 404px; /* Updated width property */
-}
-
-.sofia {
-  text-decoration: none;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 0.5px #f5f5f5;
-  letter-spacing: 0.1em;
-  font-size:  200px;
-  font-family: 'Adorage', serif;
-  margin: 0px;
-}
-
-.sofia:hover {
-  -webkit-text-fill-color: #f5f5f5;
-}
-
 /* Gradient */
 
-/* .heroImg {
-  z-index: 1;
-} */
-
-/* .heroHeader {
+.heroHeader {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -189,6 +98,7 @@
   position: relative;
   background: linear-gradient(180deg, #FFFFFF 51.85%, rgba(255, 255, 255, 0.5) 77.89%, rgba(217, 217, 217, 0) 91.96%);
 }
+
 .heroHeader:before,
 .heroHeader:after {
   content: '';
@@ -389,4 +299,97 @@
     top: 50vh;
     left: 100vw;
   }
-} */
+}
+
+
+.heroHeader {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  padding: 60px;
+  padding-bottom: 0px;
+  background: linear-gradient(180deg, #FFFFFF 51.85%, rgba(255, 255, 255, 0.5) 77.89%, rgba(217, 217, 217, 0) 91.96%);
+}
+
+.portraitText{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #8FB6FF;
+  text-align: center;
+  z-index: 0;
+  position: relative;
+}
+
+.portraitText > p {
+ font-size: 55px;
+ padding: 0px;
+ margin: 0px;
+ font-weight: 100;
+}
+
+.sofia {
+  text-decoration: none;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 0.3px #8FB6FF;
+  letter-spacing: 0.1em;
+  font-size:  220px;
+  font-family: 'Adorage', serif;
+  margin:-40px;
+  padding: 0px;
+}
+
+.portrait:hover .sofia {
+  -webkit-text-fill-color: #8FB6FF;
+}
+
+.circle{
+  position: absolute;
+  z-index: 1;
+  width:750px;
+  height: 600px;
+}
+
+.portraitImage {
+  position: relative;
+  z-index: 2;
+  width:600px;
+  height: 600px;
+}
+
+.containerInner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  bottom: 100px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.portrait {
+  position: relative;
+  width: 100%;
+  height: 50%;
+  z-index: 1;
+}
+
+.portrait:hover .portraitImage {
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.CTA {
+  margin: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
+  
