--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
     background:
       conic-gradient(from 90deg at 3px 3px,#0000 90deg,#E1F5FF 0) 
       0 0/50px 50px;
+    cursor: none;
 }
 
 a {
